# jzzrenderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Vector.cpp  Vector.h  main.cpp  my_GL.cpp  my_GL.h
TinyRendering/: CMakeLists.txt  main.cpp
TinyRendering/6.2/: CMakeLists.txt  main.cpp
TinyRendering/lesson4/: CMakeLists.txt  main.cpp
TinyRendering/lesson4.1/: CMakeLists.txt  main.cpp
TinyRendering/lesson5/: CMakeLists.txt  main.cpp
TinyRendering/lesson6.1/: CMakeLists.txt  main.cpp
TinyRendering/lesson7/: CMakeLists.txt  main.cpp  our_gl.cpp
TinyRendering/lesson8/: CMakeLists.txt  main.cpp
TinyRendering/lesson8.1/: CMakeLists.txt  main.cpp  our_gl.cpp
ext/: CMakeLists.txt
scenes/pa1/: bunny.exr
scenes/pa2/: ajax-normals.exr
scenes/pa3/: ajax-ao.exr  ajax-simple.exr
scenes/pa4/blender/: cbox.exr
scenes/pa4/cbox/: cbox-distributed.exr  cbox-distributed.xml
scenes/pa4/logo/: logo-dielectric.exr  logo-diffuse.exr
scenes/pa5/ajax/: ajax-rough.exr  ajax-rough.xml  ajax-smooth.exr  ajax-smooth.xml
scenes/pa5/cbox/: cbox_ems.xml
scenes/pa5/table/: table_mats.exr
scenes/pa5/veach_mi/: veach_mats.exr
src/: main.cpp
